fixed white space screen when loading webpage

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-html, body {
+html,body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
@@ -8,6 +8,9 @@ html, body {
   overflow-x: hidden;
   scroll-behavior: smooth;
   background: url(../img/sky.png);
+}
+html:not(:hover), body:not(:hover) {
+  background-color: lightblue;
 }
 header {
   display: flex;
@@ -32,19 +35,24 @@ header {
 }
 .button {
   background-color: transparent;
-  box-shadow: inset 0 0 0 2px white;
+  box-shadow: 1px 1px 10px 2px black;
   text-decoration: none;
-  color: white;
+  color: black;
   display: inline-block;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   padding: 1rem;
   font-size: small;
   text-transform: uppercase;
   white-space: nowrap;
+  border-radius: 0.3rem;
+  transition: box-shadow 0.3s ease, transform 0.3s ease;
 }
 .button:hover {
-  box-shadow: inset 0 0 0 2px black;
-  color: black;
+  color: white;
+  box-shadow: 1px 1px 10px 1px white;
+}
+.button:active {
+  transform: translate(1.5px, 1.5px);
 }
 nav {
   position: sticky;
